[package]
name = "gitcircles-github"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
comfy-table = "7.1.4"
fjall = "2.11.2"
indicatif = { version = "0.18.0", features = ["tokio"] }
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
