[package]
name = "gitcircles-github"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
fjall = "2"
indicatif = { version = "0.18", features = ["tokio"] }
octocrab = "0.44"
once_cell = "1.19"
regex = "1.11"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.47", features = ["full"] }

[dev-dependencies]
tempfile = "3.12"
